editing the Readme and the index

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <title>Demo App</title>
 </head>
 <body>
-    <h1>Bloqueado</h1>
+    <h1 class="centered">Budgets API - By Gamn2090</h1>
+    <h3 class="centered"> Checkout the documentation at my <a href="https://github.com/gamn2090/budget-api" target="_blank">Github!</a></h3>
 </body>
 </html>
